# drf-vscode-template

./: pyproject.toml  run_tests.sh
src/: manage.py
src/fts/: settings.py
tests/test_declarations/: test_views.py
